# locket

./: .editorconfig  .gitignore  Cargo.toml  IMPLEMENTATION_COMPLETED.md  IMPLEMENTATION_PROGRESS.md  Makefile  README.md  deny.toml
crates/locket-agent/: Cargo.toml
crates/locket-agent/src/: audit.rs  audit_deny.rs  audit_verify.rs  backup.rs  config.rs  degraded_audit.rs  device_members.rs  envelope.rs  error.rs  framing.rs  grant.rs  ide_env_session.rs  lib.rs  method.rs  peer_cred.rs  policies.rs  prepare_exec.rs  profile.rs  resolve.rs  reveal.rs  runtime_sessions.rs  scan.rs  secrets.rs  server.rs  session_lock.rs  set_secret.rs  status.rs  status_stream.rs  tests.rs  unlock_cache.rs  versions.rs  windows_pipe.rs
crates/locket-agent/src/auditing/: audit.rs  degraded_audit.rs  mod.rs
crates/locket-agent/src/handlers/: auth.rs  backup.rs  clients.rs  config.rs  mod.rs  profile.rs  reveal.rs  scan.rs  secrets.rs  versions.rs
crates/locket-agent/src/protocol/: framing.rs  method.rs  mod.rs
crates/locket-agent/src/state/: grant.rs  ide_env_session.rs  mod.rs  runtime_sessions.rs  session_lock.rs  unlock_cache.rs
crates/locket-agent/src/transport/: mod.rs  server.rs
crates/locket-app/: Cargo.toml
crates/locket-app/src/: lib.rs
crates/locket-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/locket-app/src-tauri/capabilities/: desktop.json
crates/locket-app/src-tauri/permissions/: desktop-commands.toml
crates/locket-app/src-tauri/src/: agent_client.rs  clipboard.rs  (+3 more)
crates/locket-app/ui/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
crates/locket-cli/: Cargo.toml
crates/locket-cli/src/: agent.rs  audit.rs  bootstrap.rs  bundle.rs  cli_error.rs  client.rs  compose.rs  config_validation.rs  debug_cmd.rs  diagnostics.rs  diff.rs  emit_example.rs  exec.rs  get.rs  import.rs  init.rs  install_hooks.rs  key_access.rs  lock.rs  main.rs  meta.rs  onboarding.rs  passkey.rs  profile.rs  project.rs  project_files.rs  prompts.rs  run.rs  runtime.rs  scan.rs  secret_helpers.rs  secrets_cmd.rs  set.rs  status.rs  time_helpers.rs
crates/locket-core/: Cargo.toml
crates/locket-core/src/: bundle.rs  env.rs  error.rs  id.rs  invite.rs  lib.rs  pgp_word_list.rs  policy.rs  privacy.rs  profile_name.rs  reference_uri.rs  secret_name.rs  time.rs  update_manifest.rs
crates/locket-core/tests/: proptest_audit_hmac.rs  proptest_bundle_manifest.rs  proptest_canonical_json.rs
crates/locket-crypto/: Cargo.toml
crates/locket-crypto/benches/: key_derivation.rs
crates/locket-crypto/examples/: perf_passphrase_unlock.rs  perf_recovery_envelope_unlock.rs
crates/locket-crypto/src/: aad.rs  aead.rs  error.rs  key_wrap.rs  lib.rs  passphrase.rs  purpose.rs  random.rs  recovery_code.rs  recovery_envelope.rs  secret_value.rs  tests.rs
crates/locket-docker/: Cargo.toml
crates/locket-docker/src/: lib.rs
crates/locket-exec/: Cargo.toml
crates/locket-exec/src/: ephemeral_env_file.rs  lib.rs
crates/locket-platform/: Cargo.toml
crates/locket-platform/src/: agent_pipe.rs  automation_client_key.rs  core_dumps.rs  device_private_key.rs  error.rs  fs_helpers.rs  lib.rs  linux_local_authentication.rs  linux_user_verifier.rs  locked_vault_audit.rs  macos_local_authentication.rs  master_key.rs  passkey.rs  passphrase.rs  process.rs  recovery.rs  tests.rs  user_verification.rs  windows_local_authentication.rs  windows_user_verifier.rs
crates/locket-scan/: Cargo.toml
crates/locket-scan/src/: detect.rs  finding.rs  lib.rs  redact.rs  rules.rs  suppressions.rs  tests.rs
crates/locket-scan/tests/: leak_canary.rs
crates/locket-store/: Cargo.toml
crates/locket-store/src/: audit.rs  device.rs  error.rs  grants.rs  keys.rs  lib.rs  passkey.rs  profile.rs  roots.rs  runtime_session.rs  schema.rs  secret.rs  team.rs  tests.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_agent_protocol/: request.json  response-error.json
fuzz/corpus/fuzz_audit_row/: all-json-types.json  duplicate-keys.json  field-lines.txt  key-ordering.json  malformed-truncated.json  metadata.json  nested-arrays.json  nested-metadata.json  non-json-text.json  realistic-scan-row.json  realistic-suppressed.json  utf8-bom.json
fuzz/corpus/fuzz_bundle_container/: control-chars.json  count-mismatch.json  metadata.json
fuzz/corpus/fuzz_device_descriptor/: base64-wrapper.txt  control-label.json  descriptor.json
fuzz/corpus/fuzz_dotenv_import/: basic.env  comment-eol.env  comments-only.env  crlf-line-endings.env  export-prefix.env  invalid-keys.env  names-and-nulls.env  nul-byte-in-value.env  quoted-values.env  quotes-and-export.env  realistic.env  unmatched-quotes.env  utf8-values.env
fuzz/corpus/fuzz_env_merge/: binary-ish.txt  conflicts.txt
fuzz/corpus/fuzz_lk_uri/: basic.txt  double-at-sign.txt  embedded-nul.txt  empty-source.txt  leading-zero-version.txt  lowercase-key.txt  malformed-and-boundary.txt  max-length-key.txt  missing-scheme.txt  no-version.txt  profile-with-hyphens.txt  profile-with-underscores.txt  unknown-query-param.txt  uppercase-profile.txt  utf8-multibyte.txt  version-source-order.txt  with-version-and-source.txt  wrong-scheme.txt  zero-version.txt
fuzz/corpus/fuzz_locket_toml/: malformed-types.toml  minimal-valid.toml
fuzz/corpus/fuzz_policy_toml/: basic.toml  invalid-policy-shapes.toml  shell-and-ttl.toml
fuzz/corpus/fuzz_recovery_envelope/: json-looking.txt
fuzz/corpus/fuzz_redactor/: high-entropy-lines.txt  provider-and-known.txt
fuzz/corpus/fuzz_scanner_tokenization/: columns-and-unicode.txt  env-and-provider.txt
fuzz/corpus/fuzz_secret_name/: ansi-escape.txt  boundary.txt  digits-and-underscores.txt  embedded-nul.txt  leading-digit.txt  leading-underscore.txt  max-length-256.txt  utf8-multibyte.txt
fuzz/fuzz_targets/: fuzz_agent_protocol.rs  fuzz_audit_row.rs  fuzz_bundle_container.rs  fuzz_device_descriptor.rs  fuzz_dotenv_import.rs  fuzz_env_merge.rs  fuzz_lk_uri.rs  fuzz_locket_toml.rs  fuzz_policy_toml.rs  fuzz_recovery_envelope.rs  fuzz_redactor.rs  fuzz_scanner_tokenization.rs  fuzz_secret_name.rs
(+334 files in other folders)
