[package]
name = "locket-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
data-encoding = "2"
libfuzzer-sys = "0.4"
locket-agent = { path = "../crates/locket-agent" }
locket-core = { path = "../crates/locket-core" }
locket-platform = { path = "../crates/locket-platform" }
locket-scan = { path = "../crates/locket-scan" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[[bin]]
name = "fuzz_secret_name"
path = "fuzz_targets/fuzz_secret_name.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_env_merge"
path = "fuzz_targets/fuzz_env_merge.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_locket_toml"
path = "fuzz_targets/fuzz_locket_toml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dotenv_import"
path = "fuzz_targets/fuzz_dotenv_import.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lk_uri"
path = "fuzz_targets/fuzz_lk_uri.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_policy_toml"
path = "fuzz_targets/fuzz_policy_toml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_agent_protocol"
path = "fuzz_targets/fuzz_agent_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bundle_container"
path = "fuzz_targets/fuzz_bundle_container.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_recovery_envelope"
path = "fuzz_targets/fuzz_recovery_envelope.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_audit_row"
path = "fuzz_targets/fuzz_audit_row.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_scanner_tokenization"
path = "fuzz_targets/fuzz_scanner_tokenization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_redactor"
path = "fuzz_targets/fuzz_redactor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_device_descriptor"
path = "fuzz_targets/fuzz_device_descriptor.rs"
test = false
doc = false
bench = false
