[package]
name = "locket-agent"
description = "Local agent and protocol types for Locket"
edition.workspace = true
categories = ["command-line-utilities"]
keywords = ["secrets", "agent", "ipc"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
locket-crypto = { path = "../locket-crypto" }
locket-core = { path = "../locket-core" }
locket-store = { path = "../locket-store" }
data-encoding = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true, features = ["process"] }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { workspace = true, features = ["net"] }

[dev-dependencies]
tempfile = { workspace = true }
