[package]
name = "locket-app"
description = "Desktop app and tray shell for Locket"
edition.workspace = true
categories = ["gui"]
keywords = ["secrets", "desktop", "tray"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true
