[package]
name = "locket-cli"
description = "Command-line interface for Locket"
edition.workspace = true
categories = ["command-line-utilities"]
keywords = ["secrets", "env", "cli"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "locket"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
directories = { workspace = true }
locket-crypto = { path = "../locket-crypto" }
locket-core = { path = "../locket-core" }
locket-exec = { path = "../locket-exec" }
locket-platform = { path = "../locket-platform" }
locket-scan = { path = "../locket-scan" }
locket-store = { path = "../locket-store" }
sha2 = { workspace = true }
toml = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
