[package]
name = "locket-cli"
description = "Command-line interface for Locket"
edition.workspace = true
categories = ["command-line-utilities"]
keywords = ["secrets", "env", "cli"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "locket"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
data-encoding = { workspace = true }
directories = { workspace = true }
ed25519-dalek = { workspace = true }
flate2 = { workspace = true }
ignore = { workspace = true }
locket-crypto = { path = "../locket-crypto" }
locket-core = { path = "../locket-core" }
locket-docker = { path = "../locket-docker" }
locket-exec = { path = "../locket-exec" }
locket-platform = { path = "../locket-platform" }
locket-scan = { path = "../locket-scan" }
locket-store = { path = "../locket-store" }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
zeroize = { workspace = true }

[target.'cfg(unix)'.dependencies]
locket-agent = { path = "../locket-agent" }
rustix = { workspace = true, features = ["process"] }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "signal", "sync", "time"] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
