[package]
name = "locket-cli"
description = "Command-line interface for Locket"
edition.workspace = true
categories = ["command-line-utilities"]
keywords = ["secrets", "env", "cli"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "locket"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
chacha20poly1305 = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
data-encoding = { workspace = true }
directories = { workspace = true }
ed25519-dalek = { workspace = true }
flate2 = { workspace = true }
ignore = { workspace = true }
locket-crypto = { version = "0.1.0", path = "../locket-crypto" }
locket-core = { version = "0.1.0", path = "../locket-core" }
locket-docker = { version = "0.1.0", path = "../locket-docker" }
locket-exec = { version = "0.1.0", path = "../locket-exec" }
locket-platform = { version = "0.1.0", path = "../locket-platform" }
locket-scan = { version = "0.1.0", path = "../locket-scan" }
locket-store = { version = "0.1.0", path = "../locket-store" }
rpassword = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
zeroize = { workspace = true }

[target.'cfg(unix)'.dependencies]
locket-agent = { version = "0.1.0", path = "../locket-agent" }
rustix = { workspace = true, features = ["process"] }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "signal", "sync", "time"] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
