[package]
name = "locket-core"
description = "Core policy and validation primitives for Locket"
edition.workspace = true
categories = ["command-line-utilities", "config", "development-tools"]
keywords = ["secrets", "env", "local-first", "security", "cli"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
age = "0.11.3"
bech32 = "0.11.1"
data-encoding = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
