[package]
name = "locket-crypto"
description = "Cryptographic primitives for Locket"
edition.workspace = true
categories = ["cryptography"]
keywords = ["secrets", "crypto", "local-first"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
