[package]
name = "locket-crypto"
description = "Cryptographic primitives for Locket"
edition.workspace = true
categories = ["cryptography"]
keywords = ["secrets", "crypto", "local-first"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
