[package]
name = "locket-platform"
description = "Platform integration layer for Locket"
edition.workspace = true
categories = ["os"]
keywords = ["secrets", "keychain", "platform"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
