[package]
name = "locket-platform"
description = "Platform integration layer for Locket"
edition.workspace = true
categories = ["os"]
keywords = ["secrets", "keychain", "platform"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
data-encoding = { workspace = true }
keyring = { workspace = true }
locket-crypto = { path = "../locket-crypto" }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
zeroize = { workspace = true }
