[package]
name = "locket-store"
description = "SQLite storage layer for Locket"
edition.workspace = true
categories = ["database"]
keywords = ["secrets", "sqlite", "storage"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
hmac = { workspace = true }
locket-core = { version = "0.1.0", path = "../locket-core" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
