[package]
name = "locket-desktop"
description = "Tauri 2 desktop shell for Locket"
edition.workspace = true
categories = ["gui"]
keywords = ["secrets", "desktop", "tauri"]
license.workspace = true
readme = "../../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "locket_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "locket-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[dev-dependencies]
locket-app = { path = ".." }
serde_json = { workspace = true }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
# Tauri 2's generated code trips workspace pedantic/nursery/cargo lints
# we don't own. Disable them at the crate boundary; the lib crate
# (`locket-app`) keeps the strict workspace defaults.
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
cargo = { level = "allow", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
